--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "1.5", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5", features = ["api-all", "dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "shell-execute", "shell-sidecar", "shell-open"] }
+tauri = { version = "1.5", features = [ "clipboard-write-text", "fs-remove-dir", "fs-write-file", "fs-copy-file", "fs-create-dir", "clipboard-read-text", "window-minimize", "fs-read-file", "fs-remove-file", "window-maximize", "fs-rename-file", "fs-read-dir", "fs-exists", "window-unmaximize", "window-unminimize", "window-start-dragging", "window-show", "window-hide", "window-close", "path-all", "dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "shell-execute", "shell-sidecar", "shell-open"] }
 tokio = { version = "1.0", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "5.0"
